[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[project]
name = "ARTEMIS"
version = "0.0.1"
description = "Algorithm for Rare-variant Trait Evaluation using Model-based Inference and Selection"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy==2.2.*",
  "scipy==1.14.*",
  "pandas==2.2.*",
  "matplotlib==3.9.*",
  "seaborn==0.13.*"
]